--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,12 @@
+
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
+
+remote_theme : mmistakes/minimal-mistakes
 
 # Theme Settings
 #
@@ -19,7 +22,7 @@ locale                   : "en-US"
 title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "JUDY"
 description              : "An amazing website."
 url                      : "https://judysoo1010.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -280,4 +283,4 @@ defaults:
       share: true
       related: true
       
-remote_theme : mmistakes/minimal-mistakes
+
